[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/p2/p2_01_01.png" type="Texture" id=2]
[ext_resource path="res://assets/p2/p2_01_02.png" type="Texture" id=3]
[ext_resource path="res://assets/p2/p2_01_03.png" type="Texture" id=4]
[ext_resource path="res://assets/p2/p2_01_04.png" type="Texture" id=5]
[ext_resource path="res://assets/p2/p2_01_05.png" type="Texture" id=6]
[ext_resource path="res://assets/p2/p2_01_06.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.8249, 27.6158 )

[sub_resource type="CircleShape2D" id=2]
radius = 230.405

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="body" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.212769 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.24893, 0.416321 )
shape = SubResource( 3 )

[node name="ActorDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActorDetector"]
position = Vector2( 1.91489, 2.97872 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="ActorDetector" to="." method="_on_ActorDetector_body_entered"]
[connection signal="body_exited" from="ActorDetector" to="." method="_on_ActorDetector_body_exited"]
